[package]
name = "memwrite-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.windows]
version = "0.51.1"
features = [
    "Win32_System_Threading",
    "Win32_System_Diagnostics_Debug",
    "Win32_Foundation",
]

[profile.release]
# strip = true
# opt-level = "z"  # Optimize for size.
# lto = true
# codegen-units = 1
# panic = "abort"